# sqlite-and-fastapi

./: .env  README.md  main.py  pyproject.toml  run.sh  test_main.py
infraestructure/controllers/: user_controller.py
infraestructure/db/: db.py
infraestructure/models/: user.py
infraestructure/routes/: user_router.py
infraestructure/schemas/: user_schema.py
test/: test_users.py
